# capella_msgs

./: .gitignore
camera_calibrate_msgs/: CMakeLists.txt  package.xml
camera_calibrate_msgs/launch/: stub_server.py
camera_calibrate_msgs/msg/: CalibrationInfo.msg  CameraCalibrateResult.msg  CameraInfo.msg  FrameCaptured.msg
camera_calibrate_msgs/src/: stub_server.cpp
camera_calibrate_msgs/srv/: AdditionalCapture.srv  Confirm.srv  DeleteFrame.srv  GenerateCameraIntrinsics.srv  GetAutoCaptureCtrlParams.srv  GoOn.srv  LaunchCamera.srv  ManualCapture.srv  RequestAllFrames.srv  RequestCalibrationProgress.srv  StopCalibration.srv  StopCamera.srv
capella_ros_msg/: CMakeLists.txt  package.xml
capella_ros_msg/action/: DriveIntoElevator.action  DriveOutofElevator.action  FindCarAvoidancePoint.action  FollowPerson.action  IntelligentCleanGarbage.action  MoveToGoal.action  PathCheck.action  RelocalizationSpin.action  SearchGarbage.action  Welt.action
capella_ros_msg/msg/: AttitudePar.msg  BSplineSegment.msg  CarDetectArray.msg  CarDetectSingle.msg  CarPassable.msg  CleaningConfig.msg  CrowdStatistics.msg  CurveSegment.msg  DeviceStatus.msg  EllipseArcSegment.msg  GarbageDetect.msg  GarbageDetectArray.msg  GarbageDetectSingle.msg  GarbageDetectbbox.msg  HighlightZones.msg  LaneCenterPaths.msg  LineSegment.msg  MultiCurve.msg  MultiRobotsInfo.msg  PassedPosesIndex.msg  PlanWithNamespace.msg  PushAndMotorCtrCmd.msg  Recognitions.msg  RobotInfo.msg  RobotInfos.msg  RobotPoseWithNamespace.msg  SingleRecognition.msg  TrackPersonBox.msg  TrackPersonBoxes.msg  UwbData.msg  Velocities.msg  WheelSpeed.msg
capella_ros_msg/srv/: ChargePileWifi.srv  IsCarPassable.srv  SpeedControl.srv  TurnoffPcPower.srv
capella_ros_service_interfaces/: CMakeLists.txt
capella_ros_service_interfaces/action/: Undock.action
capella_ros_service_interfaces/msg/: ChargeMarkerVisible.msg  ChargeState.msg  HazardDetection.msg  RgbCameraResolution.msg  SensorDataStatus.msg
capella_ros_service_interfaces/srv/: DeleteAllFrames.srv  GetDetectApriltagStatus.srv  IsInChargerRange.srv  LaunchCamera.srv  NavLaunchMode.srv  SetAutoCaptureCtrlParams.srv  SwitchCaptureMode.srv  SwitchCoverageMode.srv  SwitchResolution.srv
garage_utils_msgs/: package.xml
